# DmaTestGame

./: .gitignore  AGENTS.md  CMakeLists.txt  HijackExport.cpp  IronMan.Core.sln  IronMan.Core.vcxproj  IronMan.Core.vcxproj.filters  LowLevelAABB.lib  LowLevelDynamics.lib  Main.cpp  PhysX3CharacterKinematic_x64.lib  PhysX3Common_x64.lib  PhysX3DEBUG_x64.lib  PsFastXml_x64.lib  PxTask_x64.lib  README.md  allocMem.cpp  allocMem.h  build.bat  capi.lib  ec_internal_test.lib  legacy.lib  libcommon.lib  liblegacy.lib  libtestutil.lib  loader_attic.lib  offsets.txt  openssl.lib  ossltest.lib  p_minimal.lib  p_test.lib  padlock.lib  rebuild.bat
.github/agents/: dma-debug.agent.md  pattern-updater.agent.md  sdk-analyzer.agent.md
Core/: Auth.cpp  Auth.h  Colorset.h  Config.cpp  Config.h  Core.cpp  Core.hpp  DriverControl.cpp  DriverControl.h  FilePak.cpp  FilePak.h  HandWeaponManager.cpp  HandWeaponManager.h  Image.h  ItemManager.cpp  ItemManager.h  Menu.cpp  Menu.h  Offsets.hpp  PatternLoader.cpp  PatternLoader.h  SkinWeaponManager.h  VehicleManager.cpp  VehicleManager.h  Visuals.cpp  Visuals.h
Core/DMA/: DMAHandler.cpp  DMAHandler.h
Core/DMA/Include/: leechcore.h  vmmdll.h
Core/DirectX/: DirectX11.cpp  DirectX11.h  Drawing.cpp  Drawing.h  Imgui_dx11.cpp  Imgui_win32.cpp  Imgui_win32.h
Core/Imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h
Core/Math/: Math.cpp  Math.h  Matrix.hpp  Vector.hpp
Core/MouseController/KMBOX/: KmboxB.h  KmboxNet.cpp  KmboxNet.h
Core/PhysicsManager/: PhysicStruct.h  PhysicsManager.cpp  PhysicsManager.h
Core/SDK/: ObjectManager.cpp  ObjectManager.h  ObjectsStore.cpp  ObjectsStore.h  SDK.cpp  SDK.h  UEncrypt.cpp  UEncrypt.h  UnrealNames.cpp  UnrealNames.h
Core/SDK/CoreUObject/: Class.cpp  Class.h  Object.cpp  Object.h  ObjectMacros.h  Parameters.h  Struct.h
Core/ShareRadar/: json.h
Helper/Analysis/: AnalysisBase.cpp  AnalysisBase.h  DecryptAnalysis.cpp  DecryptAnalysis.h  UObjectAnalysis.cpp  UObjectAnalysis.h
Helper/Asm/: AsmFactory.hpp  AsmHelper32.cpp  AsmHelper32.hpp  AsmHelper64.cpp  AsmHelper64.hpp  AsmStack.hpp  AsmVariant.hpp  IAsmHelper.hpp
Helper/HttpLib/: httplib.h
Helper/Misc/: Console.cpp  Console.hpp  DynImport.hpp  InitOnce.cpp  InitOnce.hpp  JsonHelper.cpp  JsonHelper.h  ThreadMutex.cpp  ThreadMutex.h  Utils.cpp  Utils.hpp  ZydisWrapper.cpp  ZydisWrapper.h
Include/: Macro.hpp  Types.hpp  VMProtectSDK.h  WinHeaders.cpp  WinHeaders.hpp  delegate.hpp
Include/Lib/: LowLevel.lib  LowLevelCloth.lib  LowLevelParticles.lib  PhysX3CharacterKinematic_x64.lib  PhysX3Common_x64.lib  PhysX3Cooking_x64.lib  PhysX3DEBUG_x64.lib  PhysX3_x64.lib  PxFoundation_x64.lib  PxPvdSDK_x64.lib  SceneQuery.lib
Include/OpenSSL-Win64/exp/: capi.exp  dasync.exp  legacy.exp  libcrypto.exp  libssl.exp  openssl.exp  ossltest.exp  padlock.exp
Include/OpenSSL-Win64/lib/VC/x64/MD/: dasync.lib  libapps.lib  libcommon.lib
Include/OpenSSL-Win64/lib/VC/x64/MTd/: libcrypto.def  libssl.lib
Include/OpenSSL-Win64/tests/: ec_internal_test.exp  p_minimal.exp  p_test.exp
Include/OpenSSL-Win64/tests/recipes/10-test_bn_data/: bnmod.txt
